feat: load task one, add task, get task, update ui components

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
     </style>
   </head>
-  <body>
+  <body class="bg-ax-greybg">
     <app-root />
   </body>
 </html>
